# notion-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_SCRIPTS.md  DEPLOYMENT_STATUS.md  DEVELOPMENT.md  Dockerfile  FIXES_APPLIED.md  MIGRATE_TO_LATEST_API.md  MIGRATION_COMPLETE.md  NOTION_DATABASE_DIAGNOSTIC.md  NOTION_INTEGRATION_WALKTHROUGH.md  PROGRESS_REPORT.md  QUICK_REFERENCE.md  QWEN.md  README.md  WEB_CHAT_UI_IMPLEMENTATION.md  deploy.ps1  deploy.sh  diagnose_database_schema.py  docker-compose.prod.yml  docker-compose.yml  prd.md  pyproject.toml  requirements.txt  test_api_integration.py  test_imports.py  test_notion_connection.py
.claude/: settings.local.json
docs/: 251115.1.enhance-ui.md  API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md
docs/agents/: dev.md
docs/features/: 01-core-apis.md  02-web-chat-ui.md  02.1-api-token-management.md  03-teams-integration.md
docs/guide/: NOTION_INTEGRATION_SETUP.md  OPERATIONS_RUNBOOK.md
docs/impl/: 251115.1.plan-v1-enhance-ui-plan.md  251115.2.api-token-management.md
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  index.css
openspec/: project.md
scripts/: init-mongo.js  run_performance_tests.sh  sanity_check.py  test_api.py
src/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/core/: __init__.py
src/features/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_tasks_api.py  test_token_api.py  (+3 more)
(+91 files in other folders)
